# SIACH

./: .env.example  .gitignore  README.md  pyproject.toml  siach.db
backend/: config.py  db.py  main.py  models.py  schemas.py
backend/prompts/: analise_system.j2  humanizacao_system.j2  narrativa.j2
backend/routes/: analise.py  estudo.py  feedback.py  historico.py
backend/seed/: load_data.py
backend/services/: analise_chain.py  embeddings.py  estudo.py  humanizacao_chain.py  narrativa.py  persistence.py  rag.py
chroma_db/1d4efc1c-3d03-43ac-a784-eb29187082dd/: index_metadata.pickle
data/: download_german_credit.py  load_scrbcb.py
docs/superpowers/plans/: 2026-04-26-siach-implementation.md  2026-05-31-avaliacao-rag.md
docs/superpowers/specs/: 2026-04-26-siach-design.md  2026-05-31-avaliacao-rag-design.md
frontend/: app.js  avaliar.html  avaliar.js  historico.html  index.html  resultado.html  resultados.html  resultados.js  style.css
scripts/: seed.sh
tests/: test_analise_chain.py  test_api_analise.py  test_api_estudo.py  test_api_feedback.py  test_api_health.py  test_api_historico.py  test_config.py  test_e2e.py  test_embeddings.py  test_estudo_service.py  test_humanizacao_chain.py  test_models.py  test_narrativa.py  test_persistence.py  test_rag.py  test_schemas.py  test_seed_load.py  test_seed_synthetic.py
