[project]
name = "siach"
version = "0.1.0"
description = "Sistema Inteligente de Análise de Crédito Humanizada — TCC UTFPR"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-chroma>=0.2",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "jinja2>=3.1",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "python-multipart>=0.0.12",
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
